# winsage-agent

./: .env.example  .gitignore  .npmignore  COMPLETE_INSTALL_SUMMARY.md  CREATE_RELEASE.md  CROSS_PLATFORM_INSTALL.md  Cargo.toml  DELIVERY.md  EXAMPLES.md  GITHUB_PUBLISH_CHECKLIST.md  GITHUB_SUCCESS.md  INSTALL.md  INSTALLATION_GUIDE.md  LICENSE  MACOS_SUPPORT.md  MODELS.md  NPM_PUBLISH_GUIDE.md  ONE_CLICK_INSTALL.md  PROJECT_SUMMARY.md  PUBLISH_TO_NPM.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_RELEASE.md  README.md  RELEASE.md  SETUP_WIZARD.md  SUMMARY.md  demo.ps1  docker-compose.yml  package-lock.json  package.json  setup.ps1
.github/workflows/: release.yml
config/: default.toml
migrations/: 001_init.sql
scripts/: install.js  setup-wizard.js
src/: lib.rs  main.rs
src/agent/: core.rs  mod.rs
src/cli/: chat.rs  config_cmd.rs  mod.rs  sandbox_cmd.rs
src/config/: mod.rs  settings.rs
src/memory/: conversation.rs  knowledge.rs  mod.rs  storage.rs
src/models/: anthropic.rs  azure.rs  deepseek.rs  doubao.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  provider.rs  qwen.rs
src/sandbox/: executor.rs  mod.rs  security.rs  windows_sandbox.rs
src/utils/: helpers.rs  mod.rs
tests/: integration_test.rs
